...
                  disabled={isProcessing}
                >
                  {isProcessing ? (
                    <ActivityIndicator color="#FFF" size="small" />
                  ) : (
                    <Text style={styles.modalConfirmText}>
                      {passphraseMode === 'enable' ? 'Enable' : 'Confirm'}
                    </Text>
                  )}
                </A11yPressable>
              </View>
            </View>
          </View>
...
